[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "phi-guard-mcp"
version = "0.1.2"
description = "MCP server and CLI for detecting, redacting, and auditing PHI before medical text is sent to AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Charles Ree" }
]
keywords = ["mcp", "medical-ai", "privacy", "phi", "de-identification", "hipaa"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Text Processing",
]
dependencies = [
  "anyio>=4.3.0",
  "mcp>=1.2.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/charlesree826/phi-guard-mcp"
Repository = "https://github.com/charlesree826/phi-guard-mcp"
Issues = "https://github.com/charlesree826/phi-guard-mcp/issues"

[project.scripts]
phi-guard = "phi_guard_mcp.cli:main"
phi-guard-mcp = "phi_guard_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phi_guard_mcp"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
